--- a/achievements.css
+++ b/achievements.css
@@ -1,35 +1,91 @@
-.achievement-leaderboard-detail {
-  font-size:        120%;
+
+/**
+ * Single achievement display.
+ */
+.achievement {
+  border: 1px solid #bbb;
+  height: 85px;
+  margin: 0.8em auto;
+  width: 675px;
 }
 
-.achievement-unlocked {
-  margin-top:       2em;
+.achievement .achievement-body {
+  float: left;
+  padding: 0.6em;
+  width: 570px;
 }
 
-.achievement-unlocked-first {
-  float:            left;
-  width:            49%;
+.achievement .achievement-title {
+  font-size: 120%;
+  font-weight: bold;
 }
 
-.achievement-unlocked-recent {
-  float:            right;
-  width:            49%;
+.achievement-points-box {
+  background-color: #ddd;
+  border-left: 1px solid #bbb;
+  float: right;
+  text-align: center;
+  height: 85px;
+  width: 85px;
 }
 
-td.achievement-points {
-  font-size:        1.8em;
-  font-weight:      bold;
-  width:            60px;
+.achievement-points-box .achievement-points {
+  font-size: 2.6em;
+  font-weight: bold;
+  margin-top: -5px;
 }
 
-td .achievement-title {
-  font-weight:      bold;
+.achievement-points-box .achievement-unlocked {
+  font-size: 75%;
 }
 
-td.achievement-date {
-  width:            150px;
+/**
+ * Stats line on the user's achievement page.
+ */
+.achievement-stats {
+  text-align: center;
 }
 
-.achievements-admin-list {
-  width:            98%;
+/**
+ * Columns on the achievement leaderboards.
+ */
+.achievement-leaderboard .achievement-leaderboard-rank {
+  width: 10px;
 }
+
+.achievement-leaderboard .achievement-leaderboard-points,
+.achievement-leaderboard .achievement-leaderboard-unlocks {
+  width: 50px;
+}
+
+.achievement-leaderboard .achievement-leaderboard-when {
+  width: 175px;
+}
+
+#block-achievements-achievements-leaderboard .achievement-leaderboard-points {
+  width: auto;
+}
+
+#block-achievements-achievements-leaderboard .achievement-see-more {
+  text-align: right;
+}
+
+/**
+ * Stats on the per-achievement leaderboards.
+ */
+.achievement-stats-first {
+  float: left;
+  width: 49%;
+}
+
+.achievement-stats-recent {
+  float: right;
+  width: 49%;
+}
+
+.achievement-stats-first caption,
+.achievement-stats-recent caption {
+  font-size: 150%;
+  margin-bottom: 0.6em;
+}
+
