--- a/achievements.css
+++ b/achievements.css
@@ -9,6 +9,11 @@
   width: 675px;
 }
 
+.achievement-locked {
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+}
+
 .achievement .achievement-body {
   float: left;
   padding: 0.6em;
