New leaderboard CSS class added: achievements-leaderboard-current-user.

--- a/achievements.css
+++ b/achievements.css
@@ -102,6 +102,10 @@
   width: 12px;
 }
 
+.achievement-leaderboard-current-user {
+  font-weight: bold;
+}
+
 .achievement-leaderboard .achievement-leaderboard-points,
 .achievement-leaderboard .achievement-leaderboard-unlocks {
   width: 50px;
