--- a/achievements.css
+++ b/achievements.css
@@ -141,18 +141,18 @@
 /**
  * Stats on the per-achievement leaderboards.
  */
-.achievement-stats-first {
+.achievement-leaderboard-first {
   float: left;
   width: 49%;
 }
 
-.achievement-stats-recent {
+.achievement-leaderboard-recent {
   float: right;
   width: 49%;
 }
 
-.achievement-stats-first caption,
-.achievement-stats-recent caption {
+.achievement-leaderboard-first caption,
+.achievement-leaderboard-recent caption {
   font-size: 150%;
   margin-bottom: 0.6em;
 }
