Stats on user/#/achievements are themed with theme_achievement_user_stats().

--- a/achievements.css
+++ b/achievements.css
@@ -90,7 +90,7 @@
 /**
  * Stats line on the user's achievement page.
  */
-.achievement-stats {
+.achievement-user-stats {
   margin: 1em;
   text-align: center;
 }
