* tabindex on achievement notification was rewritten into a CSS override.  * #theme => 'achievement' usage has gained contextual theme suggestions.

--- a/achievements.css
+++ b/achievements.css
@@ -75,6 +75,10 @@
   display: block;
 }
 
+.achievement-notification * a:focus {
+  outline: none;
+}
+
 .achievement-notification .achievement-points-box {
   border: 1px solid #1CF608;
   background: #79F66A;
