achievement-latest-unlock.tpl.php added and used in the leaderboard.

--- a/achievements.css
+++ b/achievements.css
@@ -130,7 +130,7 @@
   font-weight: bold;
 }
 
-.achievement-leaderboard .achievement-latest-when {
+.achievement-leaderboard .achievement-latest-points {
   font-size: smaller;
 }
 
