--- a/templates/achievement-notification.html.twig
+++ b/templates/achievement-notification.html.twig
@@ -1,8 +1,7 @@
-<?php
-
+{#
 /**
  * @file
- * Default theme implementation for an achievement's full display.
+ * Default theme implementation for an achievement notification popup.
  *
  * Available variables:
  * - $achievement: The achievement being displayed, as an array.
@@ -17,21 +16,19 @@
  * - $state: The 'unlocked', 'locked', or 'secret' achievement state.
  * - $classes: String of classes for this achievement.
  */
-?>
-<div class="<?php print $classes; ?>">
-  <?php print render($title_suffix); ?>
-  <div class="achievement-image"><?php print render($image); ?></div>
+#}
+<div {{ attributes.addClass(classes) }}>
+  <div class="achievement-image">{{ image }}</div>
 
   <div class="achievement-points-box">
-    <div class="achievement-points"><?php print $achievement['points']; ?></div>
+    <div class="achievement-points">{{ achievement.points }}</div>
     <div class="achievement-unlocked-stats">
-      <div class="achievement-unlocked-timestamp"><?php print render($unlocked_date); ?></div>
-      <div class="achievement-unlocked-rank"><?php print render($unlocked_rank); ?></div>
+      <div class="achievement-unlocked-rank">{{ unlocked_rank }}</div>
     </div>
   </div>
 
   <div class="achievement-body">
-    <div class="achievement-title"><?php print render($achievement_title); ?></div>
-    <div class="achievement-description"><?php print $achievement['description']; ?></div>
+    <div class="achievement-header">{{ 'Achievement Unlocked'|t }}</div>
+    <div class="achievement-title">{{ achievement_title }}</div>
   </div>
 </div>
