--- a/templates/achievement.html.twig
+++ b/templates/achievement.html.twig
@@ -1,8 +1,10 @@
-<?php
-
+{#
 /**
  * @file
- * Default theme implementation for an achievement notification popup.
+ * Default theme implementation for an achievement's full display.
+ *
+ * @see template_preprocess_THEME_HOOK()
+ * @ingroup themeable
  *
  * Available variables:
  * - $achievement: The achievement being displayed, as an array.
@@ -17,19 +19,20 @@
  * - $state: The 'unlocked', 'locked', or 'secret' achievement state.
  * - $classes: String of classes for this achievement.
  */
-?>
-<div class="<?php print $classes; ?>">
-  <div class="achievement-image"><?php print render($image); ?></div>
+#}
+<div {{ attributes.addClass(classes) }}>
+  <div class="achievement-image">{{ image }}</div>
 
   <div class="achievement-points-box">
-    <div class="achievement-points"><?php print $achievement['points']; ?></div>
+    <div class="achievement-points">{{ achievement.points  }}</div>
     <div class="achievement-unlocked-stats">
-      <div class="achievement-unlocked-rank"><?php print render($unlocked_rank); ?></div>
+      <div class="achievement-unlocked-timestamp">{{ unlocked_timestamp }}</div>
+      <div class="achievement-unlocked-rank">{{ unlocked_rank }}</div>
     </div>
   </div>
 
   <div class="achievement-body">
-    <div class="achievement-header"><?php print t('Achievement Unlocked'); ?></div>
-    <div class="achievement-title"><?php print render($achievement_title); ?></div>
+    <div class="achievement-title">{{ achievement_title  }}</div>
+    <div class="achievement-description">{{ achievement.description }}</div>
   </div>
 </div>
