Tons of display improvements.

--- a/templates/achievement.html.twig
+++ b/templates/achievement.html.twig
@@ -24,15 +24,15 @@
   <div class="achievement-image">{{ image }}</div>
 
   <div class="achievement-points-box">
-    <div class="achievement-points">{{ achievement.points  }}</div>
+    <div class="achievement-points">{{ achievement_entity.points  }}</div>
     <div class="achievement-unlocked-stats">
-      <div class="achievement-unlocked-timestamp">{{ unlocked_timestamp }}</div>
+      <div class="achievement-unlocked-date">{{ unlocked_date }}</div>
       <div class="achievement-unlocked-rank">{{ unlocked_rank }}</div>
     </div>
   </div>
 
   <div class="achievement-body">
     <div class="achievement-title">{{ achievement_title  }}</div>
-    <div class="achievement-description">{{ achievement.description }}</div>
+    <div class="achievement-description">{{ achievement_entity.description }}</div>
   </div>
 </div>
