--- a/achievements.css
+++ b/achievements.css
@@ -1,4 +1,3 @@
-
 /**
  * Single achievement full display.
  */
@@ -80,8 +79,8 @@
 }
 
 .achievement-notification .achievement-points-box {
-  border: 1px solid #1CF608;
-  background: #79F66A;
+  border: 1px solid #1cf608;
+  background: #79f66a;
   margin-top: 0.6em;
   height: 70px;
   width: 70px;
