trying to fix notifications.

--- a/achievements.css
+++ b/achievements.css
@@ -3,8 +3,9 @@
  */
 .achievement {
   border: 1px solid #bbb;
-  height: 86px;
-  margin: 0.8em auto;
+  height: 86px !important;
+  overflow: visible !important;
+  margin: 0 auto;
 }
 
 .achievement-secret,
