--- a/templates/achievement-notification.html.twig
+++ b/templates/achievement-notification.html.twig
@@ -21,7 +21,7 @@
   <div class="achievement-image">{{ image }}</div>
 
   <div class="achievement-points-box">
-    <div class="achievement-points">{{ achievement.points }}</div>
+    <div class="achievement-points">{{ achievement_entity.points }}</div>
     <div class="achievement-unlocked-stats">
       <div class="achievement-unlocked-rank">{{ unlocked_rank }}</div>
     </div>
